--- a/portfolio.css
+++ b/portfolio.css
@@ -69,21 +69,31 @@ p {
         text-align: center;
         padding: 80px 20px;
     }
-    .about-section {
+    content-container {
         text-align: center;
     }
 }
 img {
     max-width: 50%;
 }
-.about-section {
+.content-container {
   font-size: 64px;
   line-height:80px ;  
 }
-.about-section h2 {
+.content h2 {
     font-size: 18px;
     font-family: var(--default-font-family);
 }
-.about-section-content {    
-margin: 30px;
+.content h3 {
+    font-weight: 24px;
+    font-family:var(--default-font-family);
+    line-height: 1;
 }
+.content p {
+    font-size: 14px;
+}
+.content {    
+margin: 30px;
+text-align: center;
+}
+
