--- a/portfolio.css
+++ b/portfolio.css
@@ -98,9 +98,15 @@ color: blueviolet;
     content-container {
         text-align: center;
     }
+    footer .contact-box {
+        padding:50px ;
+    }
 }
+
+
 img {
     max-height: 500px;
+    max-width: 100%;
 }
 .content-container {
   font-size: 64px;
@@ -122,4 +128,29 @@ img {
 margin: 30px;
 text-align: center;
 }
+footer {
+    margin: 60px 0;
+}
+footer .email-link{
+text-decoration: none;
+color: black;
+font-size: 20px;
+}
+footer .email-link:hover {
+    color: blueviolet;
+}
+footer .social-links a {
+margin-right: 20px;
+color: #6c63ff;
+font-size: 18px;
+border-radius: 50;
+transition: all 150ms ease-in-out;
+}
+footer .contact-box {
+    background-color: var(--secondary-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+    margin-top: 25px;   
+}
+
 
