--- a/portfolio.css
+++ b/portfolio.css
@@ -150,7 +150,8 @@ footer .contact-box {
     background-color: var(--secondary-color);
     padding: 30px 120px;
     border-radius: 10px;
-    margin-top: 25px;   
+    margin-top: 25px; 
+    background: rgb(237, 223, 212);  
 }
 
 
